--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <head></head>
 <body>
-<a href="html/Top30.html">Top30</a>
-
+  <a href="html/Top30.html">Top30</a><br/>
+  <a href="html/Top100.html">Top30</a><br/>
 </body>
